Updated variables to be final and updated some factionality to use Java 11 functions